# solana_token_info_cli

./: .env  Cargo.toml  README.md  tokens.txt
src/: args.rs  helpers.rs  main.rs  models.rs  token_processor.rs
