[package]
name = "solana_token_info_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest ={ version =  "0.12.7", features = ["json"] }
serde =  { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
trust-dns-resolver = "0.23.2"



